# autoclicker

./: README.md  package-lock.json  package.json
src/: App.css  App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: click.rs  commands.rs  cursor.rs  file.rs  input.rs  main.rs
src/click_tab/: Cps.jsx
src/components/: Cps.jsx  InputKey.jsx
src/cursor_tab/: Cursor.jsx
src/tabs/: Cps.jsx  Cursor.jsx  File.jsx  Hold.jsx
