[package]
name = "Autoclicker"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
serde_json = "1.0"
enigo = "0.3.0"
device_query = "2.1.0"
rand = "0.8.5"
spin_sleep = "1.3.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
